manga v(3.1.0.1) Java9 and Higher is supported
In this version user can run the application whatever installed JRE. now 2 packages can be generated:
	- Exe file with \lib created by lauch4j for Java8
	- Stand-alone package created by Runtime,Launch4j, and Winrar
		+ this package can work on any machine even if Java is not installed.
		+ it is well done packaged as exe extractor matches user experience.

Server Side:
  -
  - GUI:
  - add deploy folder

Client Side:
  - fix: command line mode now can show --help screen.

Gradle Side:-
  - Launch4j dpendancy is updated to be compatible with java9 and later.
  - new Gradle Project is creaed Java12
	+ it is just build.gradle files pointing to the same source code.
	+ snice java9 and later dosen't support JavaFX, then it is imported as dependancy.
	+ launch4j still can be used.
  - WinRar Self-Container-Extractor SFX is added.

 Problems NOT SOLVED YET:
  - add column of total marks.
  - time left is not apear.
  - we need to move the validation method to be inside Student class
  - let the multiple choices boxes to be hidden without taking palace.
  - ODS file loader still only 50% is implemented.